# Jimn

./: .gitignore  README.md  copyright
doc/: bentley.tex
haskell/jimn/: TODO  jimn.cabal  stack.yaml
haskell/jimn/app/: Main.hs
haskell/jimn/benchmarks/: bench-jimn.hs
haskell/jimn/src/: Box.hs  Debug.hs  Display.hs  Jimn.hs  Main.hs  Model.hs  Point.hs  Segment.hs  Tycat.hs
haskell/jimn/src/Jimn/: Box.hs  Display.hs  Model.hs  Point.hs  PointsRounder.hs  Segment.hs
haskell/jimn/test/: Spec.hs
rapport/: irl.tex
rust/dyntreap/: Cargo.toml
rust/jimn/: Cargo.toml  PLAN.txt  RETOURS.txt  TODO
rust/jimn/examples/: angles.rs  arc.rs  arc_angles.rs  bentley_ottmann.rs  boxes.rs  classifier.rs  clipper.rs  coordinates_hash.rs  graph.rs  heaven.rs  holed_polygon.rs  inclusion.rs  inner_point.rs  offsetter.rs  overlap.rs  pocket.rs  polygon.rs  polygon_builder.rs  polygon_segment.rs  polygon_simplification.rs  quadrant.rs  random.rs  segments.rs  stl.rs  tile.rs  treap.rs  tree.rs  tycat.rs
rust/jimn/src/: arc.rs  bentley_ottmann.rs  bentley_ottmann2.rs  bounding_box.rs  classifier.rs  clip_classifier.rs  clipper.rs  comparison.rs  elementary_path.rs  facet.rs  graph.rs  holed_pocket.rs  holed_polygon.rs  lib.rs  main.rs  offsetter.rs  overlap.rs  pocket.rs  point.rs  point3.rs  polygon.rs  precision.rs  quadrant.rs  segment.rs  stl.rs  sweeping_lines.rs  tagged_path.rs  tile.rs  tycat.rs
rust/jimn/src/bentley_ottmann/: mod.rs  paths.rs
rust/jimn/src/clipper/: clip_classifier.rs  mod.rs
rust/jimn/src/pocket/: builder.rs  mod.rs  pocket_builder.rs
rust/jimn/src/polygon/: builder.rs  mod.rs  polygon_builder.rs
rust/jimn/src/stl/: facet.rs  mod.rs  point3.rs
rust/jimn/src/tree/: inclusion_tree.rs  mod.rs  treap.rs
rust/jimn/src/tree/inclusion_tree/: mod.rs  polygon_segment.rs
rust/jimn/src/tree/treap/: counters.rs  mod.rs  node.rs  rawtreap.rs
rust/jimn/src/utils/: coordinates_hash.rs  debug.rs  float.rs  mod.rs  precision.rs
rust/jimn/tests_bentley_ottmann/: overlap.bo
soutenance/: soutenance.odp
src/: TODO  bench.py  bentley.py  check.pl  clean.sh  debug.py  debug2.py  decorate.py  mosaique.py  point.py  profile.sh  pylint.sh  regression.sh  segment.py  solid.stl  status.txt  stl2gcode.py  test.py  testPoint.py  test_kuhn_munkres.py  test_poly_builder.py  test_simple.py  test_stl.py  test_tycat.py  tests_km  triangle.py  validate_entry.py  vulture.sh
src/benchmark/: no_intersections.py  pocket.py  profile.sh  run.py
src/haskell/: Facet.hs  Point.hs  Segment.hs  (+2 more)
test_files/: cordoba_2.stl  cordoba_complex.stl
(+171 files in other folders)
