name:                jimn
version:             0.0.0.1
synopsis:            path computations for 2.5d routers
description:         Please see README.md
homepage:            https://github.com/wagnerf42/Jimn
license:             GPL3
license-file:        LICENSE
author:              Frederic Wagner
maintainer:          frederic.wagner@imag.fr
copyright:           2016 frederic wagner
category:            Geometry
build-type:          Simple
cabal-version:       >=1.10

executable jimn
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, bytestring, binary >= 0.8.4.0, process
