name:                jimn
version:             0.0.0.1
synopsis:            path computations for 2.5d routers
description:         Please see README.md
homepage:            https://github.com/wagnerf42/Jimn
license:             GPL3
license-file:        LICENSE
author:              Frederic Wagner
maintainer:          frederic.wagner@imag.fr
copyright:           2016 frederic wagner
category:            Geometry
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jimn, Jimn.Display, Jimn.Box, Jimn.Point, Jimn.Segment, Jimn.Model, Jimn.PointsRounder
  build-depends:       base >= 4.7 && < 5, containers, bytestring, binary >= 0.8.4.0, process, unordered-containers
  default-language:    Haskell2010

executable jimn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jimn
  default-language:    Haskell2010

test-suite jimn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jimn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wagnerf42/Jimn
