[package]
name = "jimn"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]

[profile.bench]
debug = true

[profile.release]
debug = true

[[bin]]
name = "main"
doc = false

[dependencies]
rand = "0.3"
byteorder = "0.5.3"
argparse = "0.2.1"
dyntreap = {path="../dyntreap"}
itertools = "*"
float-cmp = "^0.2.5"
num-traits = "*"
